# supabase-mcp-ai

./: .env.example  .env.test.example  .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml  requirements.txt
src/: __init__.py  ai_schema_search.py  exceptions.py  langchain_agents.py  logger.py  nl_migrations.py  server.py  settings.py
src/clients/: api_client.py  base_http_client.py  management_client.py  sdk_client.py
src/core/: container.py  feature_manager.py
src/services/api/: api_manager.py  spec_manager.py
src/services/database/: migration_manager.py  postgres_client.py  query_manager.py
src/services/database/sql/: loader.py  models.py  validator.py
src/services/database/sql/queries/: create_migration.sql  get_migrations.sql  get_schemas.sql  get_table_schema.sql  get_tables.sql  init_migrations.sql
src/services/database/sql/queries/logs/: auth_logs.sql  cron_logs.sql  edge_logs.sql  function_edge_logs.sql  pgbouncer_logs.sql  postgres_logs.sql  postgrest_logs.sql  realtime_logs.sql  storage_logs.sql  supavisor_logs.sql
src/services/logs/: log_manager.py
src/services/safety/: models.py  safety_configs.py  safety_manager.py
src/services/sdk/: auth_admin_models.py  auth_admin_sdk_spec.py
src/tools/: __init__.py  manager.py  registry.py
src/tools/descriptions/: api_tools.yaml  database_tools.yaml  logs_and_analytics_tools.yaml  safety_tools.yaml  sdk_tools.yaml
tests/: conftest.py  test_container.py  test_settings.py  test_tool_manager.py  test_tools.py  test_tools_integration.py.bak
tests/services/api/: test_api_client.py  test_api_manager.py  test_spec_manager.py
tests/services/database/: test_migration_manager.py  test_postgres_client.py  test_query_manager.py
tests/services/database/sql/: conftest.py  test_loader.py  test_sql_validator.py
tests/services/logs/: test_log_manager.py
tests/services/safety/: test_api_safety_config.py  test_safety_manager.py  test_sql_safety_config.py
tests/services/sdk/: test_auth_admin_models.py  test_sdk_client.py
